set password length/variables, reorganized js structure

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </div>
         <div class="checkbox-area">
           <p> <input type="number" id=lengthInput min="8" max="128"> Password Length (From 8-128 Characters)</p>
-          <p> <input type="checkbox" id=wantsNumbers>Include Numbers</p>
-          <p> <input type="checkbox" id=wantsUppercase>Include Uppercase Letters</p>
-          <p> <input type="checkbox" id=wantsLowercase>Include Lowercase Letters</p>
-          <p> <input type="checkbox" id=wantsSpecialCharacters>Include Special Characters</p>
+          <p> <input type="checkbox" id="wantsNumbers">Include Numbers</p>
+          <p> <input type="checkbox" id="wantsUppercase">Include Uppercase Letters</p>
+          <p> <input type="checkbox" id="wantsLowercase">Include Lowercase Letters</p>
+          <p> <input type="checkbox" id="wantsSpecialCharacters">Include Special Characters</p>
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
